# python-project-initialiser

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.toml  initialise.py  pyproject.toml
src/: __init__.py  configuration.py  main.py
tests/: __init__.py
